Add Soap request on item-card to get delivery fees

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "~11.0.6",
     "@angular/core": "~11.0.6",
     "@angular/forms": "~11.0.6",
+    "@angular/http": "^7.2.16",
     "@angular/localize": "~11.0.6",
     "@angular/material": "^11.0.3",
     "@angular/platform-browser": "~11.0.6",
@@ -24,18 +25,34 @@
     "@angular/router": "~11.0.6",
     "@ng-bootstrap/ng-bootstrap": "^8.0.1",
     "bootstrap": "^4.5.3",
+    "buffer": "^6.0.3",
+    "concat-stream": "^2.0.0",
+    "core-js": "^3.8.2",
+    "crypto-js": "^4.0.0",
+    "events": "^3.2.0",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
+    "ngx-soap": "^0.7.0",
     "rxjs": "~6.6.0",
+    "sax": "^1.2.4",
+    "soap": "^0.36.0",
+    "stream": "0.0.2",
     "tslib": "^2.0.0",
+    "uuid": "^3.3.2",
+    "uuidv4": "^6.2.6",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.6",
     "@angular/cli": "~11.0.6",
     "@angular/compiler-cli": "~11.0.6",
+    "@types/events": "^3.0.0",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.19.14",
+    "@types/webpack-env": "^1.16.0",
     "codelyzer": "^6.0.0",
+    "easy-soap-request": "^4.1.2",
+    "fs": "0.0.1-security",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.0",
