--- a/package.json
+++ b/package.json
@@ -1,54 +1,59 @@
 {
-    "name": "marketplace-j2-eeclient",
-    "version": "0.0.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^11.0.6",
-        "@angular/cdk": "^11.0.3",
-        "@angular/common": "~11.0.6",
-        "@angular/compiler": "~11.0.6",
-        "@angular/core": "~11.0.6",
-        "@angular/forms": "~11.0.6",
-        "@angular/localize": "~11.0.6",
-        "@angular/material": "^11.0.3",
-        "@angular/platform-browser": "~11.0.6",
-        "@angular/platform-browser-dynamic": "~11.0.6",
-        "@angular/router": "~11.0.6",
-        "@ng-bootstrap/ng-bootstrap": "^8.0.1",
-        "bootstrap": "^4.5.3",
-        "core-js": "^3.8.2",
-        "jquery": "^3.5.1",
-        "rxjs": "~6.6.0",
-        "sxml": "^1.0.4",
-        "zone.js": "~0.10.2"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~0.1100.6",
-        "@angular/cli": "~11.0.6",
-        "@angular/compiler-cli": "~11.0.6",
-        "@types/jasmine": "~3.6.0",
-        "@types/node": "^12.19.14",
-        "@types/webpack-env": "^1.16.0",
-        "codelyzer": "^6.0.0",
-        "easy-soap-request": "^4.1.2",
-        "jasmine-core": "~3.6.0",
-        "jasmine-spec-reporter": "~5.0.0",
-        "karma": "~5.1.0",
-        "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage": "~2.0.3",
-        "karma-jasmine": "~4.0.0",
-        "karma-jasmine-html-reporter": "^1.5.0",
-        "protractor": "~7.0.0",
-        "ts-node": "~8.3.0",
-        "tslint": "~6.1.0",
-        "typescript": "~4.0.2"
-    }
+  "name": "marketplace-j2-eeclient",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^11.0.6",
+    "@angular/cdk": "^11.0.3",
+    "@angular/common": "~11.0.6",
+    "@angular/compiler": "~11.0.6",
+    "@angular/core": "~11.0.6",
+    "@angular/forms": "~11.0.6",
+    "@angular/localize": "~11.0.6",
+    "@angular/material": "^11.0.3",
+    "@angular/platform-browser": "~11.0.6",
+    "@angular/platform-browser-dynamic": "~11.0.6",
+    "@angular/router": "~11.0.6",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.1",
+    "apollo-angular": "^2.2.0",
+    "apollo-angular-link-http": "^1.11.0",
+    "apollo-cache-inmemory": "^1.6.6",
+    "bootstrap": "^4.5.3",
+    "core-js": "^3.8.2",
+    "graphql-tag": "^2.11.0",
+    "jquery": "^3.5.1",
+    "rxjs": "~6.6.0",
+    "zone.js": "~0.10.2",
+    "@apollo/client": "^3.0.0",
+    "graphql": "^15.0.0"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1100.6",
+    "@angular/cli": "~11.0.6",
+    "@angular/compiler-cli": "~11.0.6",
+    "@types/jasmine": "~3.6.0",
+    "@types/node": "^12.19.14",
+    "@types/webpack-env": "^1.16.0",
+    "codelyzer": "^6.0.0",
+    "easy-soap-request": "^4.1.2",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.1.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.2"
+  }
 }
